# BankFlow-Tactical-Analyzer

./: .gitignore  .vercelignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  completed.md  gemini-to-fix.md  generate_test_files.py  index.html  main.py  package-lock.json  package.json  pyrightconfig.json  session_state.json  tailwind.config.js  task.md  tsconfig.json  vercel.json  version.json  vite.config.ts
.ai-orchestration/: README.md  init-framework.sh
.ai-orchestration/config/: agents.yaml  routing.yaml
.ai-orchestration/templates/: task-code.yaml  task-docs.yaml  task-quality-check.yaml  task-review.yaml
.github/: RELEASE_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
.sisyphus/drafts/: rename-display-name.md
api/: feedback.ts
crates/bankflow-core/: Cargo.toml
crates/bankflow-core/benches/: pipeline.rs
crates/bankflow-core/src/: batch.rs  error.rs  exporter.rs  lib.rs  matcher.rs  models.rs  parser.rs  processor.rs  wasm.rs
crates/bankflow-core/tests/: exporter_counterparty.rs  exporter_format.rs  integration_flow.rs  parser_headers.rs  parser_parsing.rs  wasm.rs
docs/: ARCHITECTURE.md  CODEX.md  PROJECT.md  RELEASE_CHECKLIST.md  TECHNICAL_SPEC.md  TRIALS.md  USER_GUIDE.md  USER_MANUAL_zh-TW.md  WORK_SUMMARY_2026-01-27.md  desktop-audit.md  fixtures-spec.md
docs/changelog/: v0.3.9.md
docs/plans/: 2026-01-20-tauri-rust-migration-design.md  2026-01-27-export-format-fix.md  2026-01-27-modern-ui-light-dark.md  2026-01-29-feedback-links-design.md  2026-01-29-feedback-ui-and-backend-design.md  ROADMAP.md  (+6 more)
public/: version.json
scripts/: build-portable-zip.sh  build-wasm.sh  create_batch_fixtures.py  generate-fixtures.py  generate-sample-fixtures.py  generate_broken_fixture.py  generate_tc_fixtures.py  verify-fixtures.py
src/: App.svelte  ClassicPage.svelte  ModernPage.svelte  app.css  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: analysis.rs  file_ops.rs  mod.rs  system.rs  whois.rs
src-tauri/src/core/: mod.rs  whois.rs
src-tauri/src/models/: mod.rs
(+103 files in other folders)
